--- a/actividades.html
+++ b/actividades.html
@@ -12,21 +12,21 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/e0b63cee0f.js" crossorigin="anonymous"></script>
     <!-- Hoja de estilos -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">#AppName</a>
+            <a class="navbar-brand" href="./index.html">#AppName</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 50vh;">
                     <li class="nav-item">
-                        <a class="nav-link" href="./nosotros.html">Sobre nosotros</a>
+                        <a class="nav-link" href="./sobre-nosotros.html">Sobre nosotros</a>
                     </li>
 
                     <li class="nav-item">
@@ -47,19 +47,19 @@
 
         <div class="column-1 padding-s">
             <div class="column-5 padding-s">
-                <img src="../img/keila-hotzel-lFmuWU0tv4M-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/keila-hotzel-lFmuWU0tv4M-unsplash.jpg" alt="" class="target-s">
             </div>
             <div class="column-5 padding-s">
-                <img src="../img/susanna-marsiglia-Yjr6EafseQ8-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/susanna-marsiglia-Yjr6EafseQ8-unsplash.jpg" alt="" class="target-s">
             </div>
             <div class="column-5 padding-s">
-                <img src="../img/dan-cristian-padure-QQkQcaz7qmY-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/dan-cristian-padure-QQkQcaz7qmY-unsplash.jpg" alt="" class="target-s">
             </div>
             <div class="column-5 padding-s">
-                <img src="../img/nick-fewings-EkyuhD7uwSM-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/nick-fewings-EkyuhD7uwSM-unsplash.jpg" alt="" class="target-s">
             </div>
             <div class="column-5 padding-s">
-                <img src="../img/etienne-girardet-j2Soo4TfFMk-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/etienne-girardet-j2Soo4TfFMk-unsplash.jpg" alt="" class="target-s">
             </div>
 
         </div>
@@ -73,7 +73,7 @@
         </div>
 
         <div class="column-3 padding-mobile">
-            <img src="../img/eva-gour-94mm2Txn12s-unsplash.jpg" alt="" class="target">
+            <img src="./img/eva-gour-94mm2Txn12s-unsplash.jpg" alt="" class="target">
             <div style="float: right;" class="padding-m">
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-plus"></i></button>
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-heart"></i></button>
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="column-3 padding-mobile">
-            <img src="../img/dan-cristian-padure-QQkQcaz7qmY-unsplash.jpg" alt="" class="target">
+            <img src="./img/dan-cristian-padure-QQkQcaz7qmY-unsplash.jpg" alt="" class="target">
             <div style="float: right;" class="padding-m">
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-plus"></i></button>
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-heart"></i></button>
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="column-3 padding-mobile">
-            <img src="../img/etienne-girardet-j2Soo4TfFMk-unsplash.jpg" alt="" class="target">
+            <img src="./img/etienne-girardet-j2Soo4TfFMk-unsplash.jpg" alt="" class="target">
             <div style="float: right;" class="padding-m">
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-plus"></i></button>
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-heart"></i></button>
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="column-3 padding-mobile">
-            <img src="../img/lucas-hoang-mwfBszKf5Xw-unsplash.jpg" alt="" class="target">
+            <img src="./img/lucas-hoang-mwfBszKf5Xw-unsplash.jpg" alt="" class="target">
             <div style="float: right;" class="padding-m">
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-plus"></i></button>
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-heart"></i></button>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="column-3 padding-mobile">
-            <img src="../img/mathilde-langevin-tbzSgZbEuz4-unsplash.jpg" alt="" class="target">
+            <img src="./img/mathilde-langevin-tbzSgZbEuz4-unsplash.jpg" alt="" class="target">
             <div style="float: right;" class="padding-m">
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-plus"></i></button>
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-heart"></i></button>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="column-3 padding-mobile">
-            <img src="../img/nick-fewings-EkyuhD7uwSM-unsplash.jpg" alt="" class="target">
+            <img src="./img/nick-fewings-EkyuhD7uwSM-unsplash.jpg" alt="" class="target">
             <div style="float: right;" class="padding-m">
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-plus"></i></button>
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-heart"></i></button>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="column-3 padding-mobile">
-            <img src="../img/susanna-marsiglia-Yjr6EafseQ8-unsplash.jpg" alt="" class="target">
+            <img src="./img/susanna-marsiglia-Yjr6EafseQ8-unsplash.jpg" alt="" class="target">
             <div style="float: right;" class="padding-m">
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-plus"></i></button>
                 <button class="btn btn-light m-1" type="submit"><i class="fa-solid fa-heart"></i></button>
