--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -12,14 +12,14 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/e0b63cee0f.js" crossorigin="anonymous"></script>
     <!-- Hoja de estilos -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">#AppName</a>
+            <a class="navbar-brand" href="./index.html">#AppName</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -63,17 +63,17 @@
 
         <div class="column-1 padding-s">
             <div class="column-4 padding-s">
-                <img src="../img/kelly-sikkema-TS6FasMlQWs-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/kelly-sikkema-TS6FasMlQWs-unsplash.jpg" alt="" class="target-s">
             </div>
             <div class="column-4 padding-s">
-                <img src="../img/etienne-girardet-j2Soo4TfFMk-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/etienne-girardet-j2Soo4TfFMk-unsplash.jpg" alt="" class="target-s">
             </div>
 
             <div class="column-4 padding-s">
-                <img src="../img/nick-fewings-EkyuhD7uwSM-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/nick-fewings-EkyuhD7uwSM-unsplash.jpg" alt="" class="target-s">
             </div>
             <div class="column-4 padding-s">
-                <img src="../img/keila-hotzel-lFmuWU0tv4M-unsplash.jpg" alt="" class="target-s">
+                <img src="./img/keila-hotzel-lFmuWU0tv4M-unsplash.jpg" alt="" class="target-s">
             </div>
         </div>
     </div>
