--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <p><strong>#AppName</strong> es una plataforma donde profesoras y profesores de todo el mundo pueden compartir actividades, pasar el rato y aprender unos con otros; colaborando en proyectos y compartiendo ideas crearemos juntos el futuro de la educación</p>
 
         <a href=""><button type="button" class="btn btn-info"><i class="fa-solid fa-right-to-bracket"></i> acceder</button></a>
-        <a href="./view/actividades.html"><button type="button" class="btn btn-warning"><i class="fa-solid fa-book-open-reader"></i> actividades</button></a>
+        <a href="./actividades.html"><button type="button" class="btn btn-warning"><i class="fa-solid fa-book-open-reader"></i> actividades</button></a>
         <a href=""><button type="button" class="btn btn-danger"><i class="fa-solid fa-newspaper"></i> blog</button></a>
-        <a href="./view/nosotros.html"><button type="button" class="btn btn-success"><i class="fa-solid fa-chalkboard-user"></i> sobre nosotros</button></a>
+        <a href="./sobre-nosotros.html"><button type="button" class="btn btn-success"><i class="fa-solid fa-chalkboard-user"></i> sobre nosotros</button></a>
         <a href=""><button type="button" class="btn btn-light"><i class="fa-solid fa-paper-plane"></i></button></a>
 
     </main>
